svg animation test

--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<script language="JavaScript" type="application/javascript" src="/lib/dist/fabric.js"></script>
 	<script language="JavaScript" type="application/javascript" src="/dist/svg.animation.class.js"></script>
-	<script language="JavaScript" type="application/javascript" src="test.js"></script>
+	<script language="JavaScript" type="application/javascript" src="/test.js"></script>
 </head>
 <body>
 <canvas id="c" width="500" height="400" style="border: solid;"></canvas>
